// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 120x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="120x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=6b33147a-9e0a-4c7c-9ab7-687791d7cc5c&s1=6b33147a-9e0a-4c7c-9ab7-687791d7cc5c&subid=6b33147a-9e0a-4c7c-9ab7-687791d7cc5c&click_id=6b33147a-9e0a-4c7c-9ab7-687791d7cc5c"
  rel="sponsored nofollow noopener"
  style="max-width: 120px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/120/600/Default"
    style="aspect-ratio: 120 / 600;"
    width="120"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 120x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="120x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=afcee72c-3291-4343-8f4c-dd3fc0d8b2b7&s1=afcee72c-3291-4343-8f4c-dd3fc0d8b2b7&subid=afcee72c-3291-4343-8f4c-dd3fc0d8b2b7&click_id=afcee72c-3291-4343-8f4c-dd3fc0d8b2b7"
  rel="sponsored nofollow noopener"
  style="max-width: 120px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/120/600/Turkish"
    style="aspect-ratio: 120 / 600;"
    width="120"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 160x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="160x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=fafb410b-27ec-4c1a-96da-b8fe8b009430&s1=fafb410b-27ec-4c1a-96da-b8fe8b009430&subid=fafb410b-27ec-4c1a-96da-b8fe8b009430&click_id=fafb410b-27ec-4c1a-96da-b8fe8b009430"
  rel="sponsored nofollow noopener"
  style="max-width: 160px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/160/600/Default"
    style="aspect-ratio: 160 / 600;"
    width="160"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 160x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="160x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=5870d223-74f3-45e9-ad0a-e28548caf271&s1=5870d223-74f3-45e9-ad0a-e28548caf271&subid=5870d223-74f3-45e9-ad0a-e28548caf271&click_id=5870d223-74f3-45e9-ad0a-e28548caf271"
  rel="sponsored nofollow noopener"
  style="max-width: 160px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/160/600/Turkish"
    style="aspect-ratio: 160 / 600;"
    width="160"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 250x100·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="250x100"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=83884a77-be7b-48ba-8e2d-b0a23c7a327e&s1=83884a77-be7b-48ba-8e2d-b0a23c7a327e&subid=83884a77-be7b-48ba-8e2d-b0a23c7a327e&click_id=83884a77-be7b-48ba-8e2d-b0a23c7a327e"
  rel="sponsored nofollow noopener"
  style="max-width: 250px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="100"
    src="https://affiliate.ledger.com/image/250/100/Default"
    style="aspect-ratio: 250 / 100;"
    width="250"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 250x100·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="250x100"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=6bd9f088-f197-483a-8017-1df847123500&s1=6bd9f088-f197-483a-8017-1df847123500&subid=6bd9f088-f197-483a-8017-1df847123500&click_id=6bd9f088-f197-483a-8017-1df847123500"
  rel="sponsored nofollow noopener"
  style="max-width: 250px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="100"
    src="https://affiliate.ledger.com/image/250/100/Turkish"
    style="aspect-ratio: 250 / 100;"
    width="250"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x250·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="300x250"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=b80a2be5-c78c-48e4-8b0d-46622e853642&s1=b80a2be5-c78c-48e4-8b0d-46622e853642&subid=b80a2be5-c78c-48e4-8b0d-46622e853642&click_id=b80a2be5-c78c-48e4-8b0d-46622e853642"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="250"
    src="https://affiliate.ledger.com/image/300/250/Default"
    style="aspect-ratio: 300 / 250;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x250·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="300x250"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=aa40c85e-fd18-4619-a6dd-4b8524c5cd89&s1=aa40c85e-fd18-4619-a6dd-4b8524c5cd89&subid=aa40c85e-fd18-4619-a6dd-4b8524c5cd89&click_id=aa40c85e-fd18-4619-a6dd-4b8524c5cd89"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="250"
    src="https://affiliate.ledger.com/image/300/250/Turkish"
    style="aspect-ratio: 300 / 250;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="300x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=f2f07697-2b40-4286-84c5-fca84dcd84a8&s1=f2f07697-2b40-4286-84c5-fca84dcd84a8&subid=f2f07697-2b40-4286-84c5-fca84dcd84a8&click_id=f2f07697-2b40-4286-84c5-fca84dcd84a8"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/300/600/Default"
    style="aspect-ratio: 300 / 600;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="300x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=a7f750d6-e446-485c-8f6e-e6d862fe2c4f&s1=a7f750d6-e446-485c-8f6e-e6d862fe2c4f&subid=a7f750d6-e446-485c-8f6e-e6d862fe2c4f&click_id=a7f750d6-e446-485c-8f6e-e6d862fe2c4f"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/300/600/Turkish"
    style="aspect-ratio: 300 / 600;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 320x50·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="320x50"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=370c71d7-1edc-474e-80c4-9b89dd91b84e&s1=370c71d7-1edc-474e-80c4-9b89dd91b84e&subid=370c71d7-1edc-474e-80c4-9b89dd91b84e&click_id=370c71d7-1edc-474e-80c4-9b89dd91b84e"
  rel="sponsored nofollow noopener"
  style="max-width: 320px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="50"
    src="https://affiliate.ledger.com/image/320/50/Default"
    style="aspect-ratio: 320 / 50;"
    width="320"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 320x50·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="320x50"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=ea95492c-ac85-43bf-9c92-56a31065d565&s1=ea95492c-ac85-43bf-9c92-56a31065d565&subid=ea95492c-ac85-43bf-9c92-56a31065d565&click_id=ea95492c-ac85-43bf-9c92-56a31065d565"
  rel="sponsored nofollow noopener"
  style="max-width: 320px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="50"
    src="https://affiliate.ledger.com/image/320/50/Turkish"
    style="aspect-ratio: 320 / 50;"
    width="320"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 468x60·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="468x60"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=5d96d034-449c-4ebe-90ab-60a6f020128b&s1=5d96d034-449c-4ebe-90ab-60a6f020128b&subid=5d96d034-449c-4ebe-90ab-60a6f020128b&click_id=5d96d034-449c-4ebe-90ab-60a6f020128b"
  rel="sponsored nofollow noopener"
  style="max-width: 468px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="60"
    src="https://affiliate.ledger.com/image/468/60/Default"
    style="aspect-ratio: 468 / 60;"
    width="468"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 468x60·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="468x60"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=f1d9a341-dc68-4f05-92a7-a9e15a12a565&s1=f1d9a341-dc68-4f05-92a7-a9e15a12a565&subid=f1d9a341-dc68-4f05-92a7-a9e15a12a565&click_id=f1d9a341-dc68-4f05-92a7-a9e15a12a565"
  rel="sponsored nofollow noopener"
  style="max-width: 468px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="60"
    src="https://affiliate.ledger.com/image/468/60/Turkish"
    style="aspect-ratio: 468 / 60;"
    width="468"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 728x90·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="728x90"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=45a50522-ba9f-4e9f-92c1-650788a8bda0&s1=45a50522-ba9f-4e9f-92c1-650788a8bda0&subid=45a50522-ba9f-4e9f-92c1-650788a8bda0&click_id=45a50522-ba9f-4e9f-92c1-650788a8bda0"
  rel="sponsored nofollow noopener"
  style="max-width: 728px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="90"
    src="https://affiliate.ledger.com/image/728/90/Default"
    style="aspect-ratio: 728 / 90;"
    width="728"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 728x90·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="728x90"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=efb85699-45fe-4546-8612-78cad4688171&s1=efb85699-45fe-4546-8612-78cad4688171&subid=efb85699-45fe-4546-8612-78cad4688171&click_id=efb85699-45fe-4546-8612-78cad4688171"
  rel="sponsored nofollow noopener"
  style="max-width: 728px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="90"
    src="https://affiliate.ledger.com/image/728/90/Turkish"
    style="aspect-ratio: 728 / 90;"
    width="728"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 850x420·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="850x420"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=4ff452de-fe97-4957-b778-5e6cd3b330c1&s1=4ff452de-fe97-4957-b778-5e6cd3b330c1&subid=4ff452de-fe97-4957-b778-5e6cd3b330c1&click_id=4ff452de-fe97-4957-b778-5e6cd3b330c1"
  rel="sponsored nofollow noopener"
  style="max-width: 850px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="420"
    src="https://affiliate.ledger.com/image/850/420/Default"
    style="aspect-ratio: 850 / 420;"
    width="850"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 850x420·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="850x420"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=c8c53baf-1d70-43d3-bfb6-f55168273491&s1=c8c53baf-1d70-43d3-bfb6-f55168273491&subid=c8c53baf-1d70-43d3-bfb6-f55168273491&click_id=c8c53baf-1d70-43d3-bfb6-f55168273491"
  rel="sponsored nofollow noopener"
  style="max-width: 850px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="420"
    src="https://affiliate.ledger.com/image/850/420/Turkish"
    style="aspect-ratio: 850 / 420;"
    width="850"
  />
</a>
`;
